# softbody2

./: .gitignore  Cargo.toml  iframe.html  index.html  wasmbuild.cmd
bindgen/: softbody_wasm.d.ts  softbody_wasm.js  softbody_wasm_bg.wasm  softbody_wasm_bg.wasm.d.ts
src/: bunny.rs  logging.rs  main.rs  softbody.rs  visuals.rs  wasm_main.rs
