[package]
name = "softbody2"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
three-d = {version = "0.14.0", features = ["egui-gui"]}
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"

[[bin]]
name = "softbody_native"
path = "src/main.rs"

[lib]
name = "softbody_wasm"
crate-type = ["cdylib"]
path = "src/wasm_main.rs"



#################################
# optimizations

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
